# geoblock

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  geoblock.py  go.mod  go.sum  main.py  pyproject.toml  renovate.json  requirements.txt  service.py  setup.cfg
.claude/commands/: release-notes.md
.github/: copilot-instructions.md
.github/prompts/: generate-changelog.prompt.md
.github/workflows/: build-test-lint.yml  build-test.yml  docker-publish.yml  merge-release.yml  nightly-tests.yml  nightly-update.yml  publish-docker.yml  tag-release.yml
cmd/: main.go
cmd/geoblock/: main.go  main_test.go
cmd/server/: main.go
e2e/: Dockerfile  config.yaml  metrics-expected.prometheus  run.sh
examples/: config.yaml  configuration.yaml
examples/caddy/: Caddyfile  README.md  compose.yaml
examples/nginx/: README.md  compose.yaml  config.yaml  nginx.conf
examples/traefik/: README.md  compose.yaml
go/: go.mod  main.go
go/set/: set.go
grafana/: dashboard.json
internal/config/: cidr.go  cidr_test.go  reader.go  reader_test.go  schema.go
internal/ipinfo/: cache.go  cache_test.go  fetcher.go  fetcher_test.go  loader.go  loader_test.go  merge_test.go  resolver.go  resolver_test.go
internal/iprange/: database.go  database_test.go  itree.go  itree_test.go  resolver.go  resolver_test.go
internal/ipres/: resolver.go  resolver_test.go
internal/itree/: interval.go  itree.go  itree_test.go
internal/metrics/: collect.go  collect_test.go  collector.go  histogram.go  histogram_test.go  metrics.go  metrics_test.go
internal/notify/: sender.go  service.go  telegram.go
internal/prometheus/: metric.go  metric_test.go
internal/rules/: engine.go  engine_test.go
internal/server/: server.go  server_test.go
scripts/: generate-releases.sh
set/: set.go
tests/: Dockerfile  lib.sh  metrics-expected.json  run.sh
(+71 files in other folders)
