[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "geoblock"
authors = [{name = "Daniel Rocha", email = "daniel@rocha.io"}]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "flit",
]

[tool.pyright]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff.lint]
# See: https://docs.astral.sh/ruff/rules/
extend-select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "D",    # pydocstyle
  "I",    # isort
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
